Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -4,7 +4,9 @@
     "repositoryName": "alessandrostone.github.io",
     "branch": "master"
   },
+  "site": {},
+  "socialnetwork": {},
   "theme": {
-    "name": "Casper"
+    "name": "casper"
   }
 }
