Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -12,7 +12,7 @@
     "postsPerPage": "5"
   },
   "socialnetwork": {
-    "github": "alessandrostone"
+    "github": "https://github.com/alessandrostone"
   },
   "theme": {
     "name": "uno"
