Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -12,6 +12,8 @@
     "postsPerPage": "5"
   },
   "socialnetwork": {
+    "email": "performerstone@gmail.com",
+    "twitter": "https://twitter.com/alexanderstone",
     "github": "https://github.com/alessandrostone"
   },
   "theme": {
