--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,7 @@
   },
   "site": {
     "title": "Alessandro Stone Aresta Blog",
-    "description": "bla bla bla ... and code",
+    "description": "0...1",
     "logo": "https://avatars.io/twitter/alexanderstone",
     "cover": "https://avatars.io/twitter/alexanderstone",
     "postsPerPage": "5"
